--- a/SchoolProjects/src/main/resources/application.properties
+++ b/SchoolProjects/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=SchoolProjects
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/schoolproject
+spring.datasource.username=root
+spring.datasource.password=UpendraV1
+
